--- a/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/index.mdx
@@ -1,17 +1,18 @@
 ---
-sidebar_label: Contribute
+sidebar_label: Beteilige dich!
 title: Contribute to YunoHost
 ---
 
 import Link from '@docusaurus/Link';
 
-### YunoHost depends exclusively on the participation of people like you.
+
+### YunoHost hängt ausschließlich von der Beteiligung von Leuten wie dir ab.
 
 ---
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-heart'/> Spread the word
+    ## <FAIcon icon='fa-heart'/> Weitererzählen
   </Column>
 
   <Column className='text--center'>
