--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -1,280 +1,276 @@
 ---
-title: Markdown Guide
+title: Guide Markdown
 ---
 
-Markdown is a markup language created in 2004, many add-ons developing the possibilities of this language exist. The objective of this guide is to aim for the exhaustiveness of the possibilities of this formatting language within the framework of the YunoHost documentation and not Markdown languages in general.
+Le Markdown est un langage de balisage créé en 2004, de nombreux add-on développant les possibilités de ce langage existent. L'objectif de ce guide est de tendre vers l’exhaustivité des possibilités de ce langage de formatage dans le cadre de la documentation de YunoHost et non des langages Markdown en général.
 
-Markdown allows text to be formatted using tags, it allows *human* reading of the text; even with formatting. Even if only one notepad is needed there are many markdowns software (Markdown on [framalibre.org (fr)](https://framalibre.org/recherche-par-crit-res?keys=markdown)). It is relatively easy to use.
+Markdown permet de formater du texte à l'aide de balises, il permet une lecture *humaine* du texte ; même avec le formatage. Même si un unique bloc note est nécessaire il existe de nombreux logiciels markdowns (Markdown sur [framalibre.org](https://framalibre.org/recherche-par-crit-res?keys=markdown)). Sa prise en main est relativement facile.
 
-## The different levels of titles
+## Les différents niveaux de titres
 
-By writing titles as follows:
-
-```markdown
-# Level 1 title
-## Level 2 title
-### Level 3 title
-#### Level 4 title
-##### Level 5 title
-###### Level 6 title
-```
-
-They appear like this:
-
-# Level 1 title
-
-## Level 2 title
-
-### Level 3 title
-
-#### Level 4 title
-
-##### Level 5 title
-
-###### Level 6 title
-
-## Formatting in paragraphs
-
-To type a line break without creating a new paragraph, it is necessary to type **two consecutive spaces**. Otherwise, the text will continue in a row respecting the general constraints of the page style.
-
-By writing this:
+En rédigeant des titres comme suit :
 
 ```markdown
-For text in *italic you have to frame it with an asterisk* `*`
-To write **bold text by two asterisks** `**`
-You can also ~~bar the text~~ by framing it with two tildes `~`
+# Titre de niveau 1
+## Titre de niveau 2
+### Titre de niveau 3
+#### Titre de niveau 4
+##### Titre de niveau 5
+###### Titre de niveau 6
 ```
 
-It reads like this:
+Ils apparaissent comme cela :
 
-For text in *italic you have to frame it with an asterisk* `*`
-To write **bold text by two asterisks** `**`
-You can also ~~bar the text~~ by framing it with two tildes `~`
+# Titre de niveau 1
 
-## Create links
+## Titre de niveau 2
 
-To create a link to a site outside of the YunoHost documentation:
+### Titre de niveau 3
+
+#### Titre de niveau 4
+
+##### Titre de niveau 5
+
+###### Titre de niveau 6
+
+## Formatage dans les paragraphes
+
+Pour taper un retour à la ligne sans créer de nouveau paragraphe, il est nécessaire de taper **deux espaces consécutifs**.Sans cela, le texte continuera à la suite en respectant les contraintes générales du style de la page.
+
+En rédigeant ça :
 
 ```markdown
-[Text to display](https://lelien.tld)
+Pour du texte en *italique il faut encadrer par un astérisque* `*`
+Pour rédiger du **texte en gras par deux astérisques** `**`
+On peut aussi ~~barrer le texte~~ en encadrant avec deux tildes `~`
 ```
 
-will be displayed as such:
-[Text to display](https://lelien.tld)
+On peut lire ça :
 
-It is the same for the documentation pages, except that the link is internal. The page name is its default route, as defined in its page header:
+Pour du texte en *italique il faut encadrer par un astérisque* `*`
+Pour rédiger du **texte en gras par deux astérisques** `**`
+On peut aussi ~~barrer le texte~~ en encadrant avec deux tildes `~`
+
+## Créer des liens
+
+Pour créer un lien vers un site hors de la documentation de YunoHost :
 
 ```markdown
-[Wiki Page](/contribute/write_documentation/)
+[Texte à afficher](https://lelien.tld)
 ```
 
-The link will return to the page with the correct language setting if the page exists, or defaults to the next available language (French, usually):
-[Wiki page](/contribute/write_documentation/)
+s'affichera comme tel :
+[Texte à afficher](https://lelien.tld)
 
-:::tip
-Note that language codes are thus not to be included at the beginning of the links to other documentation pages: `/en`, `/fr`, etc. are superfluous.
-:::
-
-### Create anchors
-
-An anchor allows you to make a link to a specific point in a page, that's how the indexes at the top of the page work. To create an anchor, you need to insert code at the anchor location in the following form :
+C'est identique pour les pages de la documentation, excepté que le lien est interne. Le nom de la page est sa route par défault définie dans son *header*:
 
 ```markdown
-Text that will be doesn't even know it has an anchor.
+[Page du wiki](/write_documentation)
 ```
 
-What's displayed is:
+Le lien renverra vers la page avec la bonne configuration de langue si la page existe, ou vers une autre langue disponible (l'anglais, généralement) si elle n'existe pas.
+[Page du wiki](/write_documentation)
 
-Text that will be doesn't even know it has an anchor.
+! Notez qu'il ne faut donc pas préciser le code de langue au début des liens vers d'autres pages de la documentation : `/fr`, `/en`, etc. sont superflus.
 
-It is also possible to return an anchor directly to the title, noting the link in lower case with `-`s instead of spaces.
-All that remains is to designate the anchor to the text you want to make interactive:
+### Créer des ancres
+
+Une ancre permet de faire un lien vers un point précis dans une page, c'est comme ça que fonctionnent les index en haut de page. Pour créer une ancre, il faut insérer du code à l'endroit de l'ancre sous la forme suivante :
 
 ```markdown
-[My Anchor Returns to Lists](#anchorname)
-[My Anchor that refers to the title of the tables](#tables)
+Du texte qui ne sait même pas qu'il a une ancre <a name="nomancre"></a>
 ```
 
-[My Anchor Returns to Lists](#anchorname)
+Ce qui s'affiche :
+Du texte qui ne sait même pas qu'il a une ancre <a name="nomancre"></a>
 
-[My Anchor that refers to the title of the tables](#tables)
-
-## Displaying images
-
-To display images, the principle is the same as for links, except that a `!` is added before the text to be displayed, which is considered here as the text to be displayed if the image cannot be loaded. A description of the image is appropriate.
+Il est aussi possible de directement renvoyer une ancre au titre, en notant le lien en minuscule avec des `-` à la place des espaces.
+Il ne reste plus qu'à désigner l'ancre au texte que l'on souhaite rendre interactif :
 
 ```markdown
-![YunoHost Logo](/img/logo.png)
+[Mon ancre qui renvoie vers les listes](#nomdelancre)
+[Mon ancre qui renvoie vers le titre des tableaux](#les-tableaux)
 ```
 
-![YunoHost Logo](/img/logo.png)
+[Mon ancre qui renvoie vers les listes](#nomdelancre)
+[Mon ancre qui renvoie vers le titre des tableaux](#les-tableaux)
 
-It is possible to make a link with an image, for example:
+## Afficher des images
+
+Pour afficher des images, le principe est identique aux liens, excepté l'ajout d'un `!` avant le texte à afficher qui est ici considéré comme le texte à afficher en cas d'impossibilité de chargement de l'image. Une description de l'image convient.
 
 ```markdown
-[![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
+![Logo YunoHost](/img/logo.png)
 ```
 
-[![YunoHost Logo](/img/logo.png)](/contribute/write_documentation/)
+![Logo YunoHost](/img/logo.png)
 
-The insert of *text to be displayed if the image cannot be loaded* between the brackets in the image link is not mandatory but strongly recommended.
-
-## Format a quote
-
-Quotes are used to highlight a statement made by another person, the wiki itself manages the way it is highlighted. Markdown uses a closing chevron, this symbol: `>`, to announce a quote. Just add it before the quote, as such:
+Il est possible de faire un lien avec une image, exemple :
 
 ```markdown
->First level quotation text
->which can be formatted in different lines
-
->> And a second quote
->> with double rafters
+[![Logo YunoHost](/img/logo.png)](/write_documentation)
 ```
 
-Will be displayed:
+[![Logo YunoHost](/img/logo.png)](/write_documentation)
 
->First level quotation text
->which can be formatted in different lines
+L'encart de *texte à afficher en cas d'impossibilité de chargement de l'image* entre les crochets dans le lien de l'image n'est pas obligatoire mais fortement recommandé.
 
->> And a second quote
->> with double rafters
+## Formater une citation
 
-## Lists
-
-Lists allow to display a series of texts in an easy presentation, this is how indexes such as the [contributing documentation](/contribute/) page are written.
-
-### Ordered lists
-
-The ordered lists can be incremented as much as you wish, it is not necessary to give the right match to the number. It is possible to write down with `1.` and put in three spaces to mark the increment. For a better understanding of the plain text, it may be fine to use the numbers in ascending order to mark the increment, but it is the three consistent `spaces' before the sub-list that will mark the increment.
+Les citations permettent de mettre en valeur un propos tenu par une autre personne, le wiki gère lui-même la façon dont c'est valorisé. Markdown utilise un chevron fermant, ce symbole : `>`, pour annoncer une citation. Il suffit de les rajouter avant la citation, comme tel :
 
 ```markdown
-1. List 1
-1. List 2
-1. list 3
-   1. List 3a
-   1. List 3b
-      1. List 3b1
-      1. List 3b2
-      1. List 3b3
-         1. List 1
-         1. List 2
-         1. list 3
-1. List 4
-1. List 5
-1. list 6
+>Du texte de citation du premier niveau
+>qui peut être formaté en différentes lignes
+
+>> Et une seconde citation
+>> avec des doubles chevrons
 ```
 
-You get:
+S'affichera :
 
-1. List 1
-1. List 2
-1. list 3
-   1. List 3a
-   1. List 3b
-      1. List 3b1
-      1. List 3b2
-      1. List 3b3
-         1. List 1
-         1. List 2
-         1. list 3
-5. List 4
-3. List 5
-4. list 6
+>Du texte de citation du premier niveau
+>qui peut être formaté en différentes lignes
 
-### <span id="anchorname">Unordered lists</span>
+>> Et une seconde citation
+>> avec des doubles chevrons
 
-To create an unordered list, use the symbols `*`, `+` or `*`. This will not change the appearance of the marker in the text output. It is the incrementing of the list that will define the visual. For a better reading of the plain text, it may be good to use the different symbols to mark the increment, but it is the three spaces before the sub-list that will indicate the increment.
-As such:
+## Les listes
+
+Les listes permettent d'afficher une suite de textes dans une présentation facile, c'est ainsi que sont rédigés les index tels que celui de la page de la [documentation contributeur](/contributordoc).
+
+### Listes ordonnées
+
+Les listes ordonnées peuvent s'incrémenter autant que vous le désirez, il n'est pas obligé de donner la bonne correspondance au nombre. Il est possible de noter avec des `1.` et installer trois espaces pour marquer l'incrémentation. Pour une meilleure compréhension du texte brut, il peut être pratique d'utiliser les chiffres de manière croissante pour marquer l'incrémentation, mais ce sont bien les trois `espaces` conséquents avant la sous-liste qui désigneront l'incrémentation.
 
 ```markdown
-+ List 1
-+ List 2
-+ list 3
-   - List 3a
-   - List 3b
-      * List 3b1
-      * List 3b2
-      * List 3b3
-         + List 1
-         + List 2
-         + list 3
-- List 4
-* List 5
-+ list 6
+1. Liste 1
+1. Liste 2
+1. liste 3
+   1. Liste 3a
+   1. Liste 3b
+      1. Liste 3b1
+      1. Liste 3b2
+      1. Liste 3b3
+         1. Liste 1
+         1. Liste 2
+         1. liste 3
+5. Liste 4
+3. Liste 5
+4. liste 6
 ```
 
-This will read:
+On obtient :
 
-- List 1
-- List 2
-- list 3
-  - List 3a
-  - List 3b
-    - List 3b1
-    - List 3b2
-    - List 3b3
-      - List 1
-      - List 2
-      - list 3
+1. Liste 1
+1. Liste 2
+1. liste 3
+   1. Liste 3a
+   1. Liste 3b
+      1. Liste 3b1
+      1. Liste 3b2
+      1. Liste 3b3
+         1. Liste 1
+         1. Liste 2
+         1. liste 3
+5. Liste 4
+3. Liste 5
+4. liste 6
 
-- List 4
+### Listes non ordonnées<a name="nomdelancre"></a>
 
-- List 5
+Pour créer une liste non ordonnée, il faut utiliser les symboles `*`, `+` ou `*`. Cela ne changera pas l'apparence du marqueur dans la restitution du texte. C'est l'incrémentation de la liste qui définira le visuel. Pour une meilleure lecture du texte brut, il peut être pratique d'utiliser les différents symboles pour marquer l'incrémentation, mais ce sont bien les trois espaces avant la sous-liste qui désigneront l'incrémentation.
+Comme tel :
 
-- list 6
+```markdown
++ Liste 1
++ Liste 2
++ liste 3
+   - Liste 3a
+   - Liste 3b
+      * Liste 3b1
+      * Liste 3b2
+      * Liste 3b3
+         + Liste 1
+         + Liste 2
+         + liste 3
+- Liste 4
+* Liste 5
++ liste 6
+```
 
-## Tables
+Ce qui affichera :
 
-To create an array, use the vertical bar `|` and dashes `--`. It is mandatory to add a line of dashes under the first line of the table. There is no constraint in the size of the table. It is possible to format the array with the `:` in the second row of the array, three options are available:
+- Liste 1
+- Liste 2
+- liste 3
+  - Liste 3a
+  - Liste 3b
+    - Liste 3b1
+    - Liste 3b2
+    - Liste 3b3
+      - Liste 1
+      - Liste 2
+      - liste 3
 
-| Left aligned column | Centered column | Right aligned column |
-|:--------------------|:---------------:|---------------------:|
+- Liste 4
+
+- Liste 5
+
+- liste 6
+
+## Les tableaux
+
+Pour créer un tableau, il faut utiliser la barre verticale `|` (appelé 'pipe') et les tirets `-`. Il est obligatoire d'ajouter une ligne de tirets sous la première ligne du tableau. Il n'y a aucune contrainte dans la taille de ce dernier. Il est possible de formater le tableau avec les `:` dans la seconde ligne du tableau, trois options s'offrent à vous :
+
+| Colonne alignée à gauche | Colonne centrée | Colonne alignée à droite |
+|:-------------------------|:---------------:|-------------------------:|
 |`:-----` | `:----:` | `-----:` |
 
 ```markdown
-| **One table** | One column | One second | As many as you want |
-|:-------------:|:----------:|:----------:|:-------------------:|
-| | And formatted line | | And bold text | | Or *italic* |
-| More lines | |![An image](/img/cd.jpg) | [Or a link](/contribute/) |
+| **Un tableau** | Une colonne | Une seconde | Autant que l'on veut |
+|:--------------:|:-----------:|:-----------:|:--------------------:|
+| Une ligne formatée | | Et du **texte en gras** | Ou en *italique* |
+| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contributordoc) |
 ```
 
-Which would say this:
+Ce qui affichera ça :
 
-| **One table** | One column | One second | As many as you want |
-|:-------------:|:----------:|:----------:|:-------------------:|
-| | And formatted line | | And bold text | | Or *italic* |
-| More lines | |![An image](/img/cd.jpg) | [Or a link](/contribute/) |
+| **Un tableau** | Une colonne | Une seconde | Autant que l'on veut |
+|:--------------:|:-----------:|:-----------:|:--------------------:|
+| Une ligne formatée | | Et du **texte en gras** | Ou en *italique* |
+| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contributordoc) |
 
-## Code block
+## Bloc de codes
 
-To display plain text, `blocks of code' can be created using the grave accent`Alt Gr + è` :
+Pour afficher du texte en brut, des `blocs de code` peuvent être créés en utilisant l'accent grave `Alt Gr + è` :
 
 ```markdown
-Either inline, for example to highlight a key like `Ctrl`.
+Soit inline, par exemple pour mettre en valeur une touche comme `Ctrl`
 ```
 
-or directly as a block.
-The only difference is in the amount of bass accents:
-At least three low pitched accents at the opening and closing of the block and two low pitched accents that frame the piece of text to be formatted in a line.
+ou directement en bloc.
+La seule différence est dans la quantité d'accents graves :
+Minimum trois accents graves en ouverture et fermeture de bloc et deux accents graves qui encadrent le morceau de texte à formater dans une ligne
 
-Which will give the rendering:
+Ce qui donnera au rendu :
 
-Either inline, for example to highlight a key like `Ctrl`.
+Soit inline, par exemple pour mettre en valeur une touche comme `Ctrl`
 &#39;&#39;&#39;
 
 ```markdown
-or directly as a block.
-The only difference is in the amount of bass accents:
-At least three low pitched accents at the opening and closing of the block and two low pitched accents that frame the piece of text to be formatted in a line.
+ou directement en bloc.
+La seule différence est dans la quantité d'accents graves :
+Minimum trois accents graves en ouverture et fermeture de bloc et deux accents graves qui encadrent le morceau de texte à formater dans une ligne
 ```
 
 &#39;&#39;&#39;
 
-## Useful links
+## Liens utiles
 
-- The documentation of the original Markdown language: [daringfireball.net/projects/markdown](https://daringfireball.net/projects/markdown/)
-- Markdown Tutorial on [markdowntutorial.com](https://markdowntutorial.com)
+- La documentation du langage originel Markdown : [daringfireball.net/projects/markdown (en)](https://daringfireball.net/projects/markdown/)
+- Tutoriel Markdown sur [markdowntutorial.com](https://markdowntutorial.com)
 
-## Going further
+## Aller plus loin
 
-In a more general way, to understand how a text is formatted just inspect the source document with a note application. This does not mean that the YunoHost wiki will be able to exploit it. There are many other possibilities to use markdown syntax, feel free to add missing features. If you've noticed some missing features and/or have questions, please contact us on [the forum](https://forum.yunohost.org) or by direct message on the IRC room: **#YunoHost** on [libera.chat](https://libera.chat).
+De manière plus générale, pour comprendre comment est formaté un texte il suffit juste d'inspecter le document source avec une application note. Ce n'est pas pour autant que le wiki de YunoHost pourra l'exploiter. Il existe bien d'autres possibilités d'utiliser la syntaxe markdown, n'hésitez pas à ajouter des fonctionnalités manquantes. Si vous avez observé des manques et/ou que vous avez des questions, contactez-nous sur [le forum](https://forum.yunohost.org) ou par message direct sur le salon IRC : **#YunoHost** sur [libera.chat](https://libera.chat).
