--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/index.mdx
@@ -1,20 +1,21 @@
 ---
-sidebar_label: Contribute
+sidebar_label: Contribuer
 title: Contribute to YunoHost
 ---
 
 import Link from '@docusaurus/Link';
 
-### YunoHost depends exclusively on the participation of people like you.
+### YunoHost dépend entièrement de la participation de gens comme vous.
 
 ---
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-heart'/> Spread the word
+    ## <FAIcon icon='fa-heart'/> Passez le mot
   </Column>
 
   <Column className='text--center'>
+
     Talk about software freedom, [self-hosting](/overview/self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
   </Column>
 </Columns>
