--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/index.mdx
@@ -1,111 +1,111 @@
 ---
-title: Packaging applications
+title: Empaquetage d’applications
 ---
 
-This documentation is here to provide all the basic concepts and vocabulary needed to understand app packaging.
+Cette documentation a pour but de fournir tous les concepts de base et le vocabulaire nécessaire pour comprendre le packaging d'applications.
 
-We will detail what a YunoHost application package is, how it works, how to make your own package and how to find help if you need it.
+Nous détaillerons ce qu'est un paquet d'applications YunoHost, comment il fonctionne, comment créer votre propre paquet et comment trouver de l'aide si vous en avez besoin.
 
-## 1. Packaging philosophy
+## 1. La Philosophie du Packaging
 
-The ability to easily install applications from a catalog is a key feature of YunoHost. While you dive in the process of YunoHost application packaging, you should remember these key principles:
+La possibilité d'installer facilement des applications à partir d'un catalogue est une caractéristique clé de YunoHost. Alors que vous vous plongez dans le processus de packaging d'applications de YunoHost, vous devez vous souvenir de ces principes clés :
 
-- **The admin should not have a PhD in computer science to be able to install, configure and use your application**: try to assume that the admin doesn't know about advanced computer concepts;
+- **L'administrateur ne doit pas avoir un doctorat en informatique pour pouvoir installer, configurer et utiliser votre application** : partez du principe que l'administrateur ne connaît pas les concepts informatiques avancés;
 
-- **Less is more**, **Keep it simple!**: don't overcrowd the admin with a dozens technical questions;
+- **Less is more**, **Keep it simple!**: ne surchargez pas l'administrateur avec une douzaine de questions techniques ;
 
-- **Things should work out of the box**: for example, the admin should not have to manually finish the installation process by manually filling in database credentials;
+- **Les choses doivent être opérationnelles dès le départ** : par exemple, l'administrateur ne doit pas avoir à terminer manuellement le processus d'installation en remplissant manuellement les informations d'identification de la base de données;
 
-- YunoHost app packaging is **not just about installing** sources and dependencies: it's also about maintenance (upgrade, backup...) and integrating the app in the YunoHost ecosystem (NGINX, SSO/LDAP, Fail2Ban, application catalog, UI/UX...)
+- Le packaging d'une application YunoHost **ne se limite pas à l'installation** des sources et des dépendances : il concerne également la maintenance (mise à jour, sauvegarde...) et l'intégration de l'application dans l'écosystème YunoHost (NGINX, SSO/LDAP, Fail2Ban, catalogue d'applications, UI/UX...).
 
-## 2. Prerequisites
+## 2. Prérequis
 
-Before diving in, this documentation assumes that:
+Avant d'entrer dans le vif du sujet, cette documentation part du principe que :
 
-1. You already are a YunoHost admin yourself and already know what the install workflow looks like;)
-2. You are somewhat familiar with (or are willing to learn) system administration and bash programming;
-3. You are somewhat familiar with (or are willing to learn) Git;
-4. You are comfortable with tinkering and debugging computer stuff in general.
+1. Vous êtes déjà administrateur YunoHost et vous savez déjà à quoi ressemble le processus d'installation ;)
+2. Vous êtes familiarisé avec l'administration système et la programmation bash (ou vous êtes prêt à les apprendre) ;
+3. Vous êtes familier avec Git (ou vous êtes prêt à l'apprendre) ;
+4. Vous êtes à l'aise avec le bricolage et le débogage de matériel informatique en général.
 
-You are also encouraged to join the [app packaging chatroom](/community/chat_rooms) to ask any question you may have!
+Nous vous encourageons également à rejoindre le [salon de discussion sur le packaging](/community/chat_rooms) pour poser toutes les questions que vous pourriez avoir !
 
-At some point, you will also want to have a dev/test environment, either using [VirtualBox](/contribute/packaging_apps/resources/packaging_apps_virtualbox) or [LXC/ynh-dev](https://github.com/yunohost/ynh-dev) which is meant for the core but can totally be used for developping apps. You can also setup a dev/test VPS on your favourite hosting provider, or even develop on your prod if you like to live dangerously;).
+À un moment donné, vous voudrez aussi avoir un environnement de développement/test, soit en utilisant [VirtualBox](/packaging_apps_virtualbox) ou [LXC/ynh-dev](https://github.com/yunohost/ynh-dev) qui est destiné au noyau mais peut tout à fait être utilisé pour le développement d'applications. Vous pouvez également mettre en place un VPS de développement/test sur votre hébergeur préféré, ou même développer sur votre prod si vous aimez vivre dangereusement ;).
 
-## 3. Notes about the history of YunoHost's app packaging
+## 3. Notes sur l'histoire du packaging des applications de YunoHost
 
-Many things in YunoHost, and YunoHost app packaging format, are historical or were designed in an organic fashion. Thus some aspects may legitimately feel old.
+Beaucoup de choses dans YunoHost, et dans le format d'emballage de l'application YunoHost, sont historiques ou ont été conçues de manière organique. Certains aspects peuvent donc légitimement sembler anciens.
 
-The **"v0" of app packaging** consisted in writing raw bash scripts with no real standardization/constrain.
+La **"v0" du packaging d'applications** consistait à écrire des scripts bash bruts sans réelle standardisation/contrainte.
 
-Over time, recurrent steps (such as installing dependencies with apt, or setting up the NGINX config) where formalized into standardized bash functions, aka "helpers". This pretty much marked **the beginning of the "v1" packaging era**.
+Au fil du temps, les étapes récurrentes (comme l'installation des dépendances avec apt, ou la configuration de NGINX) ont été formalisées dans des fonctions bash standardisées, appelées "helpers". Cela a marqué **le début de l'ère de la "v1" packaging**.
 
-Various tools were implemented to test the app and standardize their behavior.
+Divers outils ont été mis en place pour tester l'application et normaliser son comportement.
 
-After a while, a set of common practices and conventions emerged and is somewhat reflected and maintain in the `example_ynh` template application. While it is tempting for dev-oriented folks to change variable naming schemes or refactorize the structure of scripts, it turns out that it is even more important to stick to the common set of practices (even though arbitrary and not elegant) to ease the maintenance of all apps by any member of the packaging community accross all repos!
+Après un certain temps, un ensemble de pratiques et de conventions communes a émergé et est en quelque sorte reflété et maintenu dans l'application modèle `example_ynh`. Bien qu'il soit tentant pour les développeurs de changer les schémas de nommage des variables ou de refactoriser la structure des scripts, il s'avère qu'il est encore plus important de s'en tenir à l'ensemble des pratiques communes (même si elles sont arbitraires et peu élégantes) pour faciliter la maintenance de toutes les applications par n'importe quel membre de la communauté du packaging à travers tous les dépôts !
 
-Nevertheless, even though helpers existed, the inherent structure of apps was hard and boring to maintain with too many redundant pieces of code or filled with funky historical conventions. **A new v2 format** [has been designed and added to YunoHost 11.1 in early 2023](https://github.com/YunoHost/yunohost/pull/1289) in the hope to modernize and simplify app packaging and improve the UI/UX of YunoHost.
+Néanmoins, même si les aides existaient, la structure inhérente des applications était difficile et ennuyeuse à maintenir avec trop de morceaux de code redondants ou remplis de conventions historiques bizarres. **Un nouveau format v2** [a été conçu et ajouté à YunoHost 11.1 début 2023](https://github.com/YunoHost/yunohost/pull/1289) dans l'espoir de moderniser et de simplifier l'emballage des applications et d'améliorer l'UI/UX de YunoHost.
 
-However, [**a future v3 format** has yet to come](https://github.com/YunoHost/issues/issues/2136) to further simplify app packaging (such as taking care of NGINX/systemd/... configurations, removing the need to manually write remove/backup/restore scripts, etc.)
+Cependant, [**un futur format v3** est encore à venir](https://github.com/YunoHost/issues/issues/2136) pour simplifier davantage l'empaquetage des applications (comme la prise en charge des configurations NGINX/systemd/..., l'élimination du besoin d'écrire manuellement des scripts de suppression/sauvegarde/restauration, etc.)
 
-## 4. General overview of a YunoHost app structure
+## 4. Aperçu général de la structure d'une application YunoHost
 
-A YunoHost app consists in a Git repository. We encourage you to have a look at those code repository to get familiar witch app repository structures:
+Une application YunoHost est construite dans un dépôt Git. Nous vous encourageons à jeter un coup d'oeil à ces dépôts de code pour vous familiariser avec les structures des dépôts d'applications :
 
-- [the `helloworld_ynh` app](https://github.com/YunoHost-Apps/helloworld_ynh)
-- [the `example_ynh` app](https://github.com/YunoHost/example_ynh) which illustrates all common features and recommended formatting
-- your favourite "real-life" app in the [YunoHost-Apps organization](https://github.com/orgs/YunoHost-Apps/repositories)
+- [l'application `helloworld_ynh`](https://github.com/YunoHost-Apps/helloworld_ynh)
+- [l'application `example_ynh`](https://github.com/YunoHost/example_ynh) qui contient toutes les fonctionnalités générales et le formattage recommandé
+- votre application "réelle" préférée dans la liste des dépots [YunoHost-Apps](https://github.com/orgs/YunoHost-Apps/repositories)
 
-Among the file contained in a package, the most important ones are:
+Parmi les fichiers contenus dans un paquet, les plus importants sont les suivants :
 
-- the **app manifest** `manifest.toml` <small>(or `.json` in the past)</small>
-  - this can be seen as the ID card of the application, containing various metadatas.
-  - it also contains the questions asked during the installation of the app.
-  - and a bunch of "resources" to initialize, such as sources to download or apt dependencies to install
-- **scripts/** contains a bunch of bash scripts corresponding to actions exposed in YunoHost
+- le **manifeste de l'application** `manifest.toml` <small>(ou `.json` dans le passé)</small>
+  - Il peut être considéré comme la carte d'identité de l'application, contenant diverses métadonnées.
+  - Il contient également les questions posées lors de l'installation de l'application.
+  - ainsi qu'un ensemble de "ressource" à initialiser, telles que les sources de l'app à télécharger ou les dépendances apt à installer
+- **scripts/** contient un ensemble de scripts bash correspondant aux actions exposées dans YunoHost
   - `_common.sh`: common variables or custom functions included in other scripts
-  - `install`/`remove`: the install and remove procedure
-  - `upgrade`: the upgrade procedure
-  - `backup`/`restore`: the backup/restore procedures
-  - (`change_url`): changing where the app is installed in terms of web access url
-- **conf/** contains a bunch of configuration templates used when installing the app. Here are some example of commonly found files:
-  - `nginx.conf`: the NGINX (=web server) configuration template for this app
-  - `systemd.service`: the systemd service configuration template for this app
-  - `config.json/yaml/???`: the app's configuration template
+  - `install`/`remove` : la procédure d'installation et de suppression
+  - `upgrade` : la procédure de mise à niveau
+  - `backup`/`restore` : les procédures de sauvegarde/restauration
+  - (`change_url`) : changer l'endroit où l'application est installée en termes de son url d'accès web
+- **conf/** contient un ensemble de modèles de configuration utilisés lors de l'installation de l'application. Voici quelques exemples de fichiers couramment trouvés :
+  - `nginx.conf` : le modèle de configuration de NGINX (=serveur web) pour cette application
+  - `systemd.service` : le modèle de configuration du service systemd pour cette application
+  - `config.json/yaml/???` : le modèle de configuration de l'application
 
-Roughly speaking, the install itself generally consists of the following operations (though these may vary depending on the complexity and technologies used by the app) - not necessarily in that exact order:
+Grosso modo, l'installation proprement dite se compose généralement des opérations suivantes (qui peuvent toutefois varier en fonction de la complexité et des technologies utilisées par l'application) - pas nécessairement dans cet ordre exact :
 
-1. YunoHost fetches the package's Git repository
-2. YunoHost asks to the admin the install questions defined in `manifest.toml`
-3. The admin fills the form and starts the install
-4. YunoHost provisions a bunch of technical prerequisites (called 'resources') such as:
+1. YunoHost récupère le dépôt Git du paquet.
+2. YunoHost pose à l'administrateur les questions d'installation définies dans `manifest.toml`.
+3. L'administrateur remplit le formulaire et démarre l'installation.
+4. YunoHost fournit un ensemble de pré-requis techniques (appelés 'ressources') tels que :
 
-    - initializes the app'skey/value store `settings.yml` with the admin's answers to the install form
-    - creates a UNIX system user for this app
-    - install apt dependencies needed for this app
-    - picks up a port for internal reverse-proxying
-    - initializes an empty SQL database
-    - configures SSOwat permissions
+    - initialise le magasin de clés/valeurs de l'application `settings.yml` avec les réponses de l'administrateur au formulaire d'installation
+    - crée un utilisateur UNIX pour cette application
+    - installe les dépendances apt nécessaires à cette application
+    - choisit un port pour le reverse-proxying interne
+    - initialise une base de données SQL vide
+    - configure les permissions SSOwat
     - ...
 
-5. The actual app's `install` script is ran and typically does:
+5. Le script `install` de l'application est exécuté et ses fonctions typiques sont de :
 
-    - fetch and deploy the app sources
-    - configure the app (typically DB credentials, internal reverse-proxy port...)
-    - add the NGINX configuration
-    - add the systemd configuration the app's daemon
-    - starts the app daemon
-    - various finialization tweaks
+    - récupérer et déployer les sources de l'application
+    - configurer l'application (typiquement les identifiants de la base de données, le port interne du reverse-proxy...)
+    - ajouter la configuration de NGINX
+    - ajoute la configuration systemd du daemon de l'application
+    - démarre le daemon de l'application
+    - divers réglages de finalisation
 
 6. ???
-7. Application is ready to use!
+7. L'application est prête à l'emploi !
 
-## 5. Creating your very first YunoHost package
+## 5. Créer votre tout premier paquet YunoHost
 
-Unless you really want to start from scratch or from [`example_ynh`](https://github.com/YunoHost/example_ynh), one common practice is to identify an app similar to the one you're trying to package - typically because it relies on the same technologies - clone the corresponding code repository, and adapt the various files.
+A moins que vous ne souhaitiez vraiment partir de zéro ou de [`example_ynh`](https://github.com/YunoHost/example_ynh), une pratique courante consiste à identifier une application similaire à celle que vous essayez d'empaqueter - typiquement parce qu'elle repose sur les mêmes technologies - à cloner le dépôt de code correspondant, et à adapter les différents fichiers.
 
 TODO/FIXME : here we should list a bunch of well-knowh apps for classic technologies
 
-- PHP apps:
-- NodeJS apps:
-- Python apps:
+- Applications PHP :
+- Applications NodeJS :
+- Applications Python :
 - ???
